Wrap fix。

--- a/source/stylesheets/info.sass
+++ b/source/stylesheets/info.sass
@@ -3,6 +3,7 @@ info
   padding-left: 10px
   background-color: #202020
   max-width: 255px
+  min-width: 255px
 
 info_wrapper
   display: flex
